--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
@@ -23,38 +23,46 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="173" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="38" y="163" width="251" height="86"/>
-                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Message"/>
-                                <connections>
-                                    <action selector="Message_Click:" destination="BYZ-38-t0r" id="177" eventType="primaryActionTriggered"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="174" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="66" y="375" width="195" height="86"/>
-                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Crash"/>
-                                <connections>
-                                    <action selector="Crash_Click:" destination="BYZ-38-t0r" id="179" eventType="primaryActionTriggered"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="175" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="23" y="257" width="454" height="86"/>
-                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Handled Exception"/>
-                                <connections>
-                                    <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" id="178" eventType="primaryActionTriggered"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="176" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
-                                <rect key="frame" x="46" y="497" width="379" height="86"/>
-                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                <state key="normal" title="Native Crash"/>
-                                <connections>
-                                    <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" id="180" eventType="primaryActionTriggered"/>
-                                </connections>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="353" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="login_background_logo.png">
+                                <rect key="frame" x="630" y="10" width="572" height="216"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="354" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" spacing="120">
+                                <rect key="frame" x="693" y="271" width="396" height="704"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="173" translatesAutoresizingMaskIntoConstraints="NO">
+                                        <rect key="frame" x="0.0" y="0.0" width="396" height="86"/>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Message"/>
+                                        <connections>
+                                            <action selector="Message_Click:" destination="BYZ-38-t0r" id="177" eventType="primaryActionTriggered"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="175" translatesAutoresizingMaskIntoConstraints="NO">
+                                        <rect key="frame" x="0.0" y="206" width="396" height="86"/>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Handled Exception"/>
+                                        <connections>
+                                            <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" id="178" eventType="primaryActionTriggered"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="174" translatesAutoresizingMaskIntoConstraints="NO">
+                                        <rect key="frame" x="0.0" y="412" width="396" height="86"/>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Crash"/>
+                                        <connections>
+                                            <action selector="Crash_Click:" destination="BYZ-38-t0r" id="179" eventType="primaryActionTriggered"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="176" translatesAutoresizingMaskIntoConstraints="NO">
+                                        <rect key="frame" x="0.0" y="618" width="396" height="86"/>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Native Crash"/>
+                                        <connections>
+                                            <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" id="180" eventType="primaryActionTriggered"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </view>
                 </viewController>
@@ -63,4 +71,7 @@
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login_background_logo.png" width="800" height="400"/>
+    </resources>
 </document>
