--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
@@ -17,50 +17,55 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBlueColor" colorSpace="custom" customColorSpace="sRGB" red="0.0392156862745098" green="0.517647058823529" blue="1" alpha="1"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="172" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" text="Sentry Xamarin tvOS sample">
-                                <rect key="frame" x="46" y="41" width="243" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="353" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="login_background_logo.png">
-                                <rect key="frame" x="630" y="10" width="572" height="216"/>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="354" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" spacing="60">
-                                <rect key="frame" x="693" y="271" width="396" height="524"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" id="527" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" alignment="center">
+                                <rect key="frame" x="345" y="208" width="1018" height="984"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="173" translatesAutoresizingMaskIntoConstraints="NO">
-                                        <rect key="frame" x="0.0" y="0.0" width="396" height="86"/>
-                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                        <state key="normal" title="Message"/>
-                                        <connections>
-                                            <action selector="Message_Click:" destination="BYZ-38-t0r" id="177" eventType="primaryActionTriggered"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="175" translatesAutoresizingMaskIntoConstraints="NO">
-                                        <rect key="frame" x="0.0" y="146" width="396" height="86"/>
-                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                        <state key="normal" title="Handled Exception"/>
-                                        <connections>
-                                            <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" id="178" eventType="primaryActionTriggered"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="174" translatesAutoresizingMaskIntoConstraints="NO">
-                                        <rect key="frame" x="0.0" y="292" width="396" height="86"/>
-                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                        <state key="normal" title="Crash"/>
-                                        <connections>
-                                            <action selector="Crash_Click:" destination="BYZ-38-t0r" id="179" eventType="primaryActionTriggered"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="176" translatesAutoresizingMaskIntoConstraints="NO">
-                                        <rect key="frame" x="0.0" y="438" width="396" height="86"/>
-                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                        <state key="normal" title="Native Crash"/>
-                                        <connections>
-                                            <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" id="180" eventType="primaryActionTriggered"/>
-                                        </connections>
-                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="172" translatesAutoresizingMaskIntoConstraints="NO" text="Sentry Xamarin tvOS sample">
+                                        <rect key="frame" x="0.0" y="482" width="218" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="354" translatesAutoresizingMaskIntoConstraints="NO" spacing="60">
+                                        <rect key="frame" x="218" y="0.0" width="800" height="984"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="353" translatesAutoresizingMaskIntoConstraints="NO" image="login_background_logo.png">
+                                                <rect key="frame" x="0.0" y="0.0" width="800" height="400"/>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="173" translatesAutoresizingMaskIntoConstraints="NO">
+                                                <rect key="frame" x="0.0" y="460" width="800" height="86"/>
+                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                                <state key="normal" title="Message"/>
+                                                <connections>
+                                                    <action selector="Message_Click:" destination="BYZ-38-t0r" id="177" eventType="primaryActionTriggered"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="175" translatesAutoresizingMaskIntoConstraints="NO">
+                                                <rect key="frame" x="0.0" y="606" width="800" height="86"/>
+                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                                <state key="normal" title="Handled Exception"/>
+                                                <connections>
+                                                    <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" id="178" eventType="primaryActionTriggered"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="174" translatesAutoresizingMaskIntoConstraints="NO">
+                                                <rect key="frame" x="0.0" y="752" width="800" height="86"/>
+                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                                <state key="normal" title="Crash"/>
+                                                <connections>
+                                                    <action selector="Crash_Click:" destination="BYZ-38-t0r" id="179" eventType="primaryActionTriggered"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="176" translatesAutoresizingMaskIntoConstraints="NO">
+                                                <rect key="frame" x="0.0" y="898" width="800" height="86"/>
+                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                                <state key="normal" title="Native Crash"/>
+                                                <connections>
+                                                    <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" id="180" eventType="primaryActionTriggered"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
