--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Main.storyboard
@@ -1,7 +1,10 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="9046" systemVersion="14F27" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="17701" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="appleTV" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9035"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,60 +18,69 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor" colorSpace="custom" customColorSpace="sRGB" red="0.0392156862745098" green="0.517647058823529" blue="1" alpha="1"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" id="527" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" alignment="center">
-                                <rect key="frame" x="345" y="208" width="1018" height="984"/>
+                            <stackView opaque="NO" contentMode="center" axis="vertical" alignment="center" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="354">
+                                <rect key="frame" x="560" y="48" width="800" height="984"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="172" translatesAutoresizingMaskIntoConstraints="NO" text="Sentry Xamarin tvOS sample">
-                                        <rect key="frame" x="0.0" y="482" width="218" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" id="354" translatesAutoresizingMaskIntoConstraints="NO" spacing="60">
-                                        <rect key="frame" x="218" y="0.0" width="800" height="984"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="353" translatesAutoresizingMaskIntoConstraints="NO" image="login_background_logo.png">
-                                                <rect key="frame" x="0.0" y="0.0" width="800" height="400"/>
-                                            </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="173" translatesAutoresizingMaskIntoConstraints="NO">
-                                                <rect key="frame" x="0.0" y="460" width="800" height="86"/>
-                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                                <state key="normal" title="Message"/>
-                                                <connections>
-                                                    <action selector="Message_Click:" destination="BYZ-38-t0r" id="177" eventType="primaryActionTriggered"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="175" translatesAutoresizingMaskIntoConstraints="NO">
-                                                <rect key="frame" x="0.0" y="606" width="800" height="86"/>
-                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                                <state key="normal" title="Handled Exception"/>
-                                                <connections>
-                                                    <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" id="178" eventType="primaryActionTriggered"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="174" translatesAutoresizingMaskIntoConstraints="NO">
-                                                <rect key="frame" x="0.0" y="752" width="800" height="86"/>
-                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                                <state key="normal" title="Crash"/>
-                                                <connections>
-                                                    <action selector="Crash_Click:" destination="BYZ-38-t0r" id="179" eventType="primaryActionTriggered"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="176" translatesAutoresizingMaskIntoConstraints="NO">
-                                                <rect key="frame" x="0.0" y="898" width="800" height="86"/>
-                                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
-                                                <state key="normal" title="Native Crash"/>
-                                                <connections>
-                                                    <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" id="180" eventType="primaryActionTriggered"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_background_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="353">
+                                        <rect key="frame" x="0.0" y="0.0" width="800" height="400"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="173">
+                                        <rect key="frame" x="144" y="460" width="512" height="86"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="512" id="aho-jR-hlK"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Message"/>
+                                        <connections>
+                                            <action selector="Message_Click:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="177"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="175">
+                                        <rect key="frame" x="144" y="606" width="512" height="86"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="512" id="A0E-TT-UOq"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Handled Exception"/>
+                                        <connections>
+                                            <action selector="Handled_Exception_Click:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="178"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="174">
+                                        <rect key="frame" x="144" y="752" width="512" height="86"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="512" id="eaw-Ed-29u"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Crash"/>
+                                        <connections>
+                                            <action selector="Crash_Click:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="179"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="176">
+                                        <rect key="frame" x="144" y="898" width="512" height="86"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="512" id="e5M-zC-T3s"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                        <state key="normal" title="Native Crash"/>
+                                        <connections>
+                                            <action selector="Native_Crash_Click:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="180"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="354" secondAttribute="height" multiplier="100:123" id="736"/>
+                                    <constraint firstAttribute="height" constant="984" id="737"/>
+                                </constraints>
                             </stackView>
                         </subviews>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <constraints>
+                            <constraint firstItem="354" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gV4-jR-icm"/>
+                            <constraint firstItem="354" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="peD-iG-2pl"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -78,5 +90,8 @@
     </scenes>
     <resources>
         <image name="login_background_logo.png" width="800" height="400"/>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
